test/corpus/comments.txt
==================
Line comment
==================

! This is a line comment
hello

---

(source_file
  (comment)
  (identifier))

==================
Block comment
==================

.data
This is a block comment
with multiple lines
.enddata
hello

---

(source_file
  (comment)
  (identifier))

==================
Mixed comments
==================

! Line comment
.data
Block comment
.enddata
hello

---

(source_file
  (comment)
  (comment)
  (identifier))

==================
Separate block comments
==================

.data
first block
.enddata
middle
.data
second block
.enddata

---

(source_file
  (comment)
  (identifier)
  (comment))
